[package]
authors = ["Alec Embke <aembke@gmail.com>"]
description = "Utilities for managing event loop threads."
homepage = "https://github.com/azuqua/wombo.rs"
keywords = ["thread", "tokio", "futures", "cancel", "utilities"]
license = "MIT"
name = "wombo"
readme = "README.md"
repository = "https://github.com/azuqua/wombo.rs"
version = "0.1.1"

[badges]

[badges.maintenance]
status = "actively-developed"

[badges.travis-ci]
branch = "master"
repository = "azuqua/wombo.rs"

[dependencies]
futures = "0.1.17"
log = "0.4.1"
parking_lot = "0.5.3"
pretty_env_logger = "0.1.1"
thread-id = "3.2.0"
tokio-core = "0.1.12"

[dependencies.uuid]
features = ["v4"]
version = "0.5"

[dev-dependencies]
tokio-timer = "0.1.2"

[lib]
doc = true
doctest = false
name = "wombo"
test = true
