[package]
authors = ["Alec Embke <aembke@gmail.com>"]
description = "Utilities for managing event loop threads."
keywords = ["thread", "tokio", "futures", "cancel", "utilities"]
license = "MIT"
name = "wombo"
readme = "README.md"
version = "0.1.2"

[dependencies]
futures = "0.1.17"
log = "0.4.1"
parking_lot = "0.12"
pretty_env_logger = "0.4"
thread-id = "3.2.0"
tokio-core = "0.1.12"

[dependencies.uuid]
features = ["v4"]
version = "0.5"

[dev-dependencies]
tokio-timer = "0.1.2"

[lib]
doc = true
doctest = false
name = "wombo"
test = true
